# batch-tr

./: README.md  package.json  pyproject.toml  pyrightconfig.json
batch_tr/: __init__.py  batch_tr.py
tests/: test_batch_tr.py  test_batch_tr_tolangzh.py
