[tool.poetry]
name = "batch-tr"
version = "0.1.0"
description = "batch machine translate via pythonpy"
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/batch-tr"

[tool.poetry.dependencies]
# python = "^3.7"
python = "^3.6.7"
translatepy = "^1.7"
logzero = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
